--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -23,6 +23,11 @@
 </p>
 
 <p>
+  <b>Location:</b>
+  <%= @event.address %>
+</p>
+
+<p>
 	<div id="countdown">
   	<div id="time"></div>
   	<div id="time-abr" class="time-abr"></div>
