--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,7 +1,7 @@
 	<div class="select-events">
 		<br />
 		<form>
-			Please select day: &nbsp;
+			Day: &nbsp;
 			<select id="event-day">
 				<option></option>
 				<% (1..6).each do |i| %>
@@ -12,7 +12,7 @@
 				<% end %>
 			</select>
 			&nbsp;&nbsp;
-			Please select category: &nbsp;
+			Category: &nbsp;
 			<select id="event-category">
 				<option></option>
 				<% @categories.each do |category| %>
