--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -2,3 +2,23 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+
+.btn-getaddr {
+	height:10px;
+}
+.btn-getaddr div {
+	font-size:10px;	
+	margin-top:-4px;
+}
+
+.control-map {
+	margin-left:400px;
+	margin-top:-100px;	
+	background:transparent;
+	border:1px solid #CCC;
+	width:200px;
+	height:150px;
+	opacity:0;
+	display:none;
+}
