--- a/app/assets/stylesheets/map_page.css
+++ b/app/assets/stylesheets/map_page.css
@@ -30,3 +30,76 @@
 	font-size:15px;
 	color:#FFF;
 }
+
+.event-popup-title {
+	font-weight:bold;
+	font-size:15px;
+}
+
+.event-popup-start {
+	font-weight:bold;
+	font-size:10px;
+}
+
+.event-popup-end {
+	font-weight:bold;
+	font-size:10px;
+}
+
+.event-popup-location {
+	font-weight:bold;
+	font-size:10px;
+}
+
+.event-popup-description {
+	font-size:13px;
+}
+
+
+.no-events-overlay {
+	position:absolute;
+	width:100%;
+	height:100%;
+	left:0px;
+	top:0px;
+	background:#000;
+	opacity:0.4;
+	filter:alpha(opacity=40);
+}
+
+.no-events-msgbox {
+	position:absolute;
+	left:40%;
+	top:20%;
+	width:300px;
+	height:160px;
+	background:#000;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	opacity:0.70;
+}
+
+.no-events-msgbox p {
+	padding-left:5px;
+	padding-right:5px;
+	color:#FFF;
+	margin-top:30px;
+	font-size:12px;
+}
+
+#no-events-button {
+	width:80px;
+	height:20px;
+	margin-top:20px;
+	opacity:10;
+	filter:alpha(opacity=10);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: 5px 5px 5px #000;
+	-webkit-box-shadow: 5px 5px 5px #000;
+	box-shadow: 5px 5px 5px #000;
+}
+
+
