--- a/app/views/events/_index.html.erb
+++ b/app/views/events/_index.html.erb
@@ -25,6 +25,7 @@
             <%= link_to 'Edit', edit_event_path(event), :class => 'btn btn-mini' %>
             <%= link_to 'Destroy', event_path(event), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
 	<% end %>
+						<%= link_to "Export", "/#{params[:locale]}/events/exportICS/event/#{event.id}", :class => "btn btn-mini" %>
         </td>
       </tr>
     <% end %>
