--- a/app/views/german_week/index.html.erb
+++ b/app/views/german_week/index.html.erb
@@ -1,32 +1,4 @@
 <% title t('.title') %>
 
-<!--
-#    main container, can have any ID
-#    replace #slider with the ID used here in slider.css file too
--->
-<div id="slider">
-    <!--
-    #    slider content container
-    #    content should be DIVs or images
-    #    images within DIVs with class="resizable" will be resized to slider dimensions,
-    #	otherwise the original size will be used
-    #    captions should be DIVs with class="slider_caption"
-    #    captions DIVs with class="slider_text" can have position attribute with possible values of "left" and "right"
-    #    DIVs with class="slider_text" and images with class="slider_text_image" will be positioned side by side
-    #	both of them can have position attribute with possible values of "left" and "right"
-    #	their values should not be the same, of course
-    -->
-    <div id="slider_content_container">
-	<img src="http://www.pixedelic.com/plugins/diapo/images/slides/up11322.jpg" />
-	<div>
-	    <div class="slider_caption" position="right">caption right caption right caption right caption right</div>
-	    <img class="resizable" src="http://demo.tutorialzine.com/2011/01/slideshow-autoadvance-jquery/img/photos/3.jpg" />
-	</div>
-	<div>
-	    <div class="slider_text" position="left">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam blandit turpis in dolor imperdiet faucibus. Maecenas eros risus, lobortis eget ultrices vel, imperdiet aliquam diam. Sed dignissim, erat et lobortis sollicitudin.
-	    </div>
-	    <img class="slider_text_image" position="right" src="http://www.pixedelic.com/plugins/diapo/images/slides/monsterinc1904.jpg" />
-	</div>
-    </div>
-</div>
+<!-- commenting out till it's completed -->
+<!--<div id="slider"></div>-->
