--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,10 @@
 
 		<%= link_to 'Search', search_path %>
 
+		<%= link_to "Contact", view_pages_path(:name => "contact") %>
+
+		<%= link_to "Disclaimer", view_pages_path(:name => "disclaimer") %>
+
 	</div>
 
   <div id="language-form">
