--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -23,6 +23,23 @@
 </p>
 
 <p>
+  <b>Categories:</b>
+	<% @event.categories.each_with_index do |c, i| %>
+  	<% separator = ((@event.categories.count - 1) != i) ? ', ' : '' %>
+  	<%= link_to c.title, category_events_path(c.title) %><%= separator %>
+	<% end %>
+</p>
+
+<p>
+  <b>Sponsors:</b>
+	<% @event.sponsors.each do |s| %>
+		<% if !s.logo_file_name.nil? %>
+	  	<%= link_to(image_tag(s.logo.url), s.url, :target => '_blank') %>
+		<% end %>
+	<% end %>
+</p>
+
+<p>
 	<div id="countdown">
   	<div id="time"></div>
   	<div id="time-abr" class="time-abr"></div>
