--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -49,5 +49,8 @@
       <%= link_to 'Edit', edit_event_path(@event), :class => 'btn' %>
       <%= link_to 'Delete', event_path(@event), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
     <% end %>
+    <%= render :inline => addthis_share_button	 %>
   </div>
 <% end %>
+
+
