--- a/app/views/layouts/bootstrap.html.erb
+++ b/app/views/layouts/bootstrap.html.erb
@@ -23,9 +23,10 @@
   </head>
   <body>
 
+
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-          <div class="container-fluid">
+        <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -44,14 +45,56 @@
     </div>
 
     <div class="container-fluid">
+
+      <header>
+         <div class="row-fluid">
+          <div class="span9">
+            logos
+          </div>
+          <div class="span3">
+            <div class="row-fluid">
+              <div class="span12">
+                <ul>
+                  <% @locales.each do |locale| %>
+                    <% unless locale.language.to_s == I18n.locale.to_s %> 
+                      <li><%= link_to locale.name, params.merge(:locale => locale.language) %></li>
+                    <% end %>
+                  <% end %>
+                </ul>
+                <div id="search_button_and_form">
+                  <div id="search_form_container">
+                    <%= render 'german_week/search_form' %>
+                  </div>
+                  <div id="search_show_button">search</div>
+                </div>
+              </div>
+            </div>
+            <div class="row-fluid">
+              <div class="span12">
+                links
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row-fluid">
+          <!-- slider here -->
+          <div class="span12" style="height: 305px; background: #000;"></div>
+        </div>
+      </header>
+
       <div class="row-fluid">
         <div class="span3">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-                <li><%= link_to "Link1", "/path1"  %></li>
-                <li><%= link_to "Link2", "/path2"  %></li>
-                <li><%= link_to "Link3", "/path3"  %></li>
+              <!--<li class="nav-header">Sidebar</li>-->
+              <li class="active"><%= link_to "Home", root_path %></li>
+              <% (1..6).each do |i| %>
+                <li>
+                  <%= link_to "#{i+13} #{t('date.day_names').to_a[i]}",
+                        day_events_path(:date => "2012-05-#{i+13}", :menu_item => i) %>					
+                </li>
+              <% end %>
+              <li><%= link_to "Map", map_page_day_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
@@ -61,7 +104,11 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <!-- 2 rows: one for sponsor logos; one for quick links and social media links -->
+        <div class="row-fluid">
+        </div>
+        <div class="row-fluid">
+        </div>
       </footer>
 
     </div> <!-- /container -->
