--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -23,8 +23,28 @@
 </p>
 
 <p>
-  <b>Location:</b>
+  <b>Address:</b>
   <%= @event.address %>
+</p>
+
+<p>
+  <b>Phone:</b>
+  <%= @event.phone %>
+</p>
+
+<p>
+  <b>Fax:</b>
+  <%= @event.fax %>
+</p>
+
+<p>
+  <b>Email:</b>
+  <%= @event.email %>
+</p>
+
+<p>
+  <b>Website:</b>
+  <%= @event.url %>
 </p>
 
 <p>
