--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -37,19 +37,7 @@
 		    <%= f.text_field :end, :as => :time_picker, :class => 'text_field' %>
 		  </div>
 		</div>
-		<div class="control-group">
-		  <%= f.label :lat, :class => 'control-label' %>
-		  <div class="controls">
-		    <%= f.text_field :lat, :class => 'text_field', :type => :number %>
-		  </div>
-		</div>
-		<div class="control-group">
-		  <%= f.label :lon, :class => 'control-label' %>
-		  <div class="controls">
-		    <%= f.text_field :lon, :class => 'text_field', :type => :number %>
-		  </div>
-		</div>
-		
+
 		<div id="control-map" class="control-map"></div>
 		<br />
 		
@@ -58,8 +46,38 @@
 			<div class="controls">
 			  <%= f.text_field :address, :class => "text_field", :label => false %>
 			  <%= link_to "#", :id => "btn-getaddr", :class => "btn btn-getaddr" do %> 
-			  	 <div>Get lat/lon</div>
+			  	 <div>Add to Map</div>
 			  <% end%>
+				<%= f.hidden_field :lat %>
+				<%= f.hidden_field :lon %>
+			</div>
+		</div>
+		
+		<div class="control-group">
+			<%= f.label :phone, :class => "control-label" %>
+			<div class="controls">
+			  <%= f.text_field :phone, :as => :phone, :class => "text_field", :label => false %>
+			</div>
+		</div>
+		
+		<div class="control-group">
+			<%= f.label :fax, :class => "control-label" %>
+			<div class="controls">
+			  <%= f.text_field :fax, :as => :fax, :class => "text_field", :label => false %>
+			</div>
+		</div>
+		
+		<div class="control-group">
+			<%= f.label :email, :class => "control-label" %>
+			<div class="controls">
+			  <%= f.text_field :email, :as => :email, :class => "text_field", :label => false %>
+			</div>
+		</div>
+		
+		<div class="control-group">
+			<%= f.label :url, :class => "control-label" %>
+			<div class="controls">
+			  <%= f.text_field :url, :as => :url, :class => "text_field", :label => false %>
 			</div>
 		</div>
 		
