--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -5,7 +5,7 @@
 
 		<% formLocale = @locales[i-1].language %>
 
-		<div id="form-<%= formLocale %>" class="multilanguage" style="<%= 'display:none;' if formLocale.to_s != params[:locale] %>">
+		<div id="form-<%= formLocale %>" class="multilanguage">
 			<h3><%= @locales[i-1].name %></h3>
 			<div class="control-group">
 			  <%= category_translation.label "#{@locales[i-1].name} #{:title}", :class => 'control-label' %>
