--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,7 +5,7 @@
 
 		<% formLocale = @locales[i-1].language %>
 
-		<div id="form-<%= formLocale %>" class="multilanguage" style="<%= 'display:none;' if formLocale.to_s != params[:locale] %>">
+		<div id="form-<%= formLocale %>" class="multilanguage" >
 			<h3><%= @locales[i-1].name %></h3>
 			<div class="control-group">
 			  <%= event_translation.label "#{@locales[i-1].name} #{:title}", :class => 'control-label' %>
@@ -63,7 +63,7 @@
 		<div class="control-group">
 			<%= f.label :fax, :class => "control-label" %>
 			<div class="controls">
-			  <%= f.text_field :fax, :as => :fax, :class => "text_field", :label => false %>
+			  <%= f.text_field :fax, :as => :phone, :class => "text_field", :label => false %>
 			</div>
 		</div>
 		
