--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -39,12 +39,12 @@
 
 <p>
   <b>Email:</b>
-  <%= @event.email %>
+  <% if !@event.email.nil? %><%= link_to @event.email, @event.email %><% end %>
 </p>
 
 <p>
   <b>Website:</b>
-  <%= @event.url %>
+  <%= link_to @event.url, @event.url %>
 </p>
 
 <p>
@@ -59,8 +59,11 @@
   <b>Sponsors:</b>
 	<% @event.sponsors.each do |s| %>
 		<% if !s.logo_file_name.nil? %>
-	  	<%= link_to(image_tag(s.logo.url), s.url, :target => '_blank') %>
+	  	<%= link_to(image_tag(s.logo.url), sponsor_path(s)) %>
+		<% else %>
+	  	<%= link_to(s.title, sponsor_path(s)) %>
 		<% end %>
+
 	<% end %>
 </p>
 
