--- a/app/views/sponsors/_form.html.erb
+++ b/app/views/sponsors/_form.html.erb
@@ -5,12 +5,12 @@
 		
 		<% formLocale = @locales[i-1].language %>
 		
-		<div id="form-<%= formLocale %>" class="multilanguage" style="<%= 'display:none;' if formLocale.to_s != params[:locale] %>">
+		<div id="form-<%= formLocale %>" class="multilanguage">
 			<h3><%= @locales[i-1].name %></h3>
 			<div class="control-group">
 			  <%= sponsor_translation.label :title, :class => 'control-label' %>
 			  <div class="controls">
-			    <%= sponsor_translation.text_field :title, :class => 'text_field' %>
+			    <%= sponsor_translation.text_field :title, :class => 'text_field', :label => false  %>
 			  </div>
 			</div>
 			<div class="control-group">
@@ -25,6 +25,35 @@
   <% end %>
 
 	<%= f.inputs do %>
+
+		<div class="control-group">
+			<%= f.label :address, :class => "control-label" %>
+			<div class="controls">
+			  <%= f.text_field :address, :class => "text_field", :label => false %>
+			</div>
+		</div>
+		
+		<div class="control-group">
+			<%= f.label :phone, :class => "control-label" %>
+			<div class="controls">
+			  <%= f.text_field :phone, :as => :phone, :class => "text_field", :label => false %>
+			</div>
+		</div>
+		
+		<div class="control-group">
+			<%= f.label :fax, :class => "control-label" %>
+			<div class="controls">
+			  <%= f.text_field :fax, :as => :phone, :class => "text_field", :label => false %>
+			</div>
+		</div>
+		
+		<div class="control-group">
+			<%= f.label :email, :class => "control-label" %>
+			<div class="controls">
+			  <%= f.text_field :email, :as => :email, :class => "text_field", :label => false %>
+			</div>
+		</div>
+		
 		<div class="control-group">
 		  <%= f.label :url, :class => 'control-label' %>
 		  <div class="controls">
