--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,73 +1,205 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Deutschen Woche 2012 - <%= yield (:title) || "German Week" %></title>
-	<%= include_gon %>
-  <%= stylesheet_link_tag  "application" %>
-  <!--[if IE 6]><%= stylesheet_link_tag 'ie6' %><![endif]-->
-  <!--[if IE 7]><%= stylesheet_link_tag 'ie7' %><![endif]-->  
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Deutschen Woche 2012 - <%= yield (:title) || "German Week" %></title>
+    <%= include_gon %>
+    <%= stylesheet_link_tag  "application" %>
+    <!--[if IE 6]><%= stylesheet_link_tag 'ie6' %><![endif]-->
+    <!--[if IE 7]><%= stylesheet_link_tag 'ie7' %><![endif]-->  
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
 
-<div id="search_button_and_form">
-  <div id="search_form_container">
-    <%= render 'german_week/search_form' %>
-  </div>
-  <div id="search_show_button">
-    search
-  </div>
-</div>
+    <div id="container">
 
-<div class="main">
-	<div id="user_nav">  
-	  <% if user_signed_in? %>  
-	    Signed in as <%= current_user.email %>. Not you?  
-	    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>  
-	  <% else %>  
-	    <%= link_to "Sign up", new_user_registration_path %> or  
-	    <%= link_to "Sign in", new_user_session_path %>  
-	  <% end %>  
-	</div>  
-	<div>
-		<%= link_to 'Sponsors', sponsors_path %>
+      <div id="header" class="clear">
 
-		<%= link_to 'Events', events_path %>
-		
-		<%= link_to 'Event Categories', categories_path %>
+        <div class="c1 def-font">
+          <img src="/assets/images/logo-german-week.png" />
+        </div><!--#header > .c1-->
 
-		<%= link_to 'Search', search_path %>
+        <div class="c2">
 
-		<%= link_to "Contact", view_pages_path(:name => "contact") %>
+          <div class="logo">
+            <img src="/assets/images/other-logo.png" />
+          </div>
 
-		<%= link_to "Disclaimer", view_pages_path(:name => "disclaimer") %>
+          <h3 class="hidden">გერმანიასა და საქართველოს შორის დიპლომატიური ურთიერთობების აღდგენის 20 წლისთავი. 20 jahre diplomatische Beziehungen zwischen Deutschland und Georgien </h3>
 
-	</div>
+        </div><!--#header > .c2-->
 
-  <div id="language-form">
-    <ul>
-    <% @locales.each do |locale| %>
-      <% unless locale.language.to_s == I18n.locale.to_s %> 
-        <li><%= link_to locale.name, params.merge(:locale => locale.language) %></li>
-      <% end %>
-    <% end %>
-    </ul>
-  </div>
+        <div class="c3">
 
-  <div id="event_menu">
-		<%= render "shared/menu" %>
-  </div>
+          <div class="top-row clear">
 
-	<h2><%= yield(:title) %></h2>
+            <div id="languages" class="def-font upcase">
+              <!--<a href="#">georgian</a>
+              <a href="#">english</a>-->
+              <% @locales.each do |locale| %>
+                <% unless locale.language.to_s == I18n.locale.to_s %> 
+                  <%= link_to locale.name, params.merge(:locale => locale.language) %>
+                <% end %>
+              <% end %>
+            </div><!--#languages-->
+          
+            <div id="search_button_and_form">
+              <div id="search_form_container">
+                <%= render 'german_week/search_form' %>
+              </div>
+              <div id="search_show_button">
+                <img src="/assets/images/search.png" />
+              </div>
+            </div><!--#search_button-->
+
+          </div><!--#header > .c3 .top-row-->
+
+          <div class="menu def-font upcase">
+            <span class="header"></span>
+            <a href="#" class="item">Über</a>
+            <a href="#" class="item">wettbewerb</a>
+            <a href="#" class="item">kontakt</a>
+          </div><!--#header .menu-->
+
+        </div><!--#header > .c3-->
+
+      </div><!--#header-->
+
+      <div id="slider" class="clear">
+        <div class="overlay"></div>
+        <img src="/assets/images/header/header.jpg" width="10%" />
+        <img src="/assets/images/header/header1.jpg" width="80%" />
+        <img src="/assets/images/header/header.jpg" width="10%" />
+      </div><!--#slider-->
+
+      <div id="content" class="clear">
+
+        <div class="container clear">
+
+            <div class="top-row clear">
+              <div class="menu-header">day</div>
+              <div class="content-header">uhr</div>
+              <div class="content-header">uhr</div>
+            </div>
+
+          <div class="menu def-font upcase">
+
+            <a href="#" class="item">montag 14</a>
+            <a href="#" class="item">dienstag 15</a>
+            <a href="#" class="item selected">mottwoch 14</a>
+            <a href="#" class="item">donnerstag 14</a>
+            <a href="#" class="item">freitag 14</a>
+            <a href="#" class="item">samstag 14</a>
+            <a href="#" class="item">categories</a>
+            <a href="#" class="item">events on map</a>
+
+          </div>
+
+          <div id="content-board">
+
+            <%= yield %>
+
+          </div><!--#content-board-->
+
+        </div><!--#content > .container-->
+
+      </div><!--#content-->
+
+      <div id="partners" class="clear">
+
+        <div class="container">
+
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner1.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner2.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner3.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner1.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner2.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner3.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner1.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner2.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner3.png" /></a>
+          </div>
+          <div class="partner">
+            <a href="#" ><img src="/assets/images/sponsors/partner1.png" /></a>
+          </div>
+
+        </div>
+
+      </div><!--#partners-->
+
+      <div id="footer">
+
+        <div class="r1 clear">
+
+          <div class="c1 def-font upcase">
+
+            <div class="menu">
+              <span class="header">menu</span>
+              <a href="#" class="item">Über</a>
+              <a href="#" class="item">wettbewerb</a>
+              <a href="#" class="item">kontakt</a>
+            </div><!--#footer .r1 .c1 .menu-->
+
+          </div><!--#footer .r1 .c1-->
+
+          <div class="c2 def-font upcase">
+
+            <div class="menu">
+              <span class="header">categories</span>
+              <a href="#" class="item">category</a>
+              <a href="#" class="item">simple text</a>
+              <a href="#" class="item">category</a>
+              <a href="#" class="item">simple text</a>
+            </div><!--#footer .r1 .c2 .menu-->
+
+          </div><!--#footer .r1 .c2-->
+
+          <div class="c3">
+
+            <div class="r1 clear">Share Tweet &nbsp;+1 &nbsp; &nbsp; Like Send 142.2k like this</div>
+            <div class="r2 clear def-font upcase">
+              <div>
+                ihre e-email:&nbsp;
+                <input type="text" class="upcase" />
+              </div>
+              <div>rss</div>
+            </div>
+
+          </div><!--#footer .r1 .c3-->
+
+        </div><!--#footer .r1-->
+
+        <div class="r2 clear"></div><!--#footer .r2-->
+
+        <div class="r3 clear">
+          <div class="c1">Copyright © 2012&nbsp;&nbsp;All Rights Reserved.</div>
+          <div class="c2">
+            Created by
+            <a href="#" href="http://jumpstart.ge/" target="_blank">JumpStart Georgia</a>
+          </div>
+        </div><!--#footer .r3-->
+
+      </div><!--#footer-->
+
+    </div><!--#container-->
 
 
-	<p class="notice"><%= notice %></p>
-	<p class="alert"><%= alert %></p>
-
-
-  <%= yield %>
-</div>
-
-<%= javascript_include_tag "application" %>
-</body>
+  </body>
 </html>
