starting to add local translations in site; added add event to new event index page

--- a/app/views/events/_index.old.html.erb
+++ b/app/views/events/_index.old.html.erb
@@ -45,5 +45,5 @@
 </table>
 
 <% if is_html && user_signed_in? %>
-  <%= link_to 'New Event', new_event_path %>
+  <%= link_to 'New Event', new_event_path, :class => "btn btn-mini" %>
 <% end %>
