--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Deutschen Woche 2012 - <%= yield (:title) || "German Week" %></title>
+  <title>Deutsche Woche 2012 - <%= yield (:title) || "German Week" %></title>
 	<%= include_gon %>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
