--- a/app/views/shared/_menu_item.html.erb
+++ b/app/views/shared/_menu_item.html.erb
@@ -1,5 +1,5 @@
 <% if menu_item.nil? %>
-	<li class="event_menu_popup_item"><br />There are no events for this date.<br /></li>
+	<li class="event_menu_popup_item"><br /><%= t('.no_events') %><br /></li>
 <% else %>
 	<li class="event_menu_popup_item">
 		<p><%= link_to menu_item.title, event_path(menu_item) %></p>
@@ -8,7 +8,7 @@
 		<p><%= menu_item.address %></p>
 		<p class="event_menu_popup_item_categories">
 			<% if menu_item.categories.count > 0 %>
-				Categories: <% menu_item.categories.each do |cat| %><%= link_to "[#{cat.title}]", category_events_path(:cat => cat.title) %> <% end %>
+				<%= t('.categories') %> <% menu_item.categories.each do |cat| %><%= link_to "[#{cat.title}]", category_events_path(:cat => cat.title) %> <% end %>
 			<% else %>&nbsp;<% end %>
 		</p>
 		
