--- a/app/views/events/_index.html.erb
+++ b/app/views/events/_index.html.erb
@@ -1,5 +1,9 @@
 <% is_html = ((defined? html) && html) ? true : false %>
 
+<% if is_html && user_signed_in? %>
+  <%= link_to 'New Event', new_event_path, :class => "btn btn-mini" %>
+<% end %>
+
 <table class="grid">
 
   <% @events.each_with_index do |event, i| %>
