--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -12,13 +12,19 @@
 	margin-top:-4px;
 }
 
+.event-lat {
+	display:none;
+}
+.event-lon {
+	display:none;
+}
+
 .control-map {
-	margin-left:400px;
-	margin-top:-100px;	
+	margin-left:150px;
+	margin-top:0px;	
 	background:transparent;
 	border:1px solid #CCC;
-	width:300px;
-	height:250px;
-	opacity:0;
-	display:none;
+	width: 100px;
+	height: 100px;
+	opacity:.4;
 }
