--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,6 @@
-<h1>Categories</h1>
+<h1><%= t('.title') %></h1>
+
 <table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
   <tbody>
     <% @categories.each do |category| %>
       <tr>
@@ -13,8 +8,8 @@
         <td>
 
 	  <% if user_signed_in? %>
-            <%= link_to 'Edit', edit_category_path(category), :class => 'btn btn-mini' %>
-            <%= link_to 'Destroy', category_path(category), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+            <%= link_to t('app.buttons.edit'), edit_category_path(category), :class => 'btn btn-mini' %>
+            <%= link_to t('app.buttons.delete'), category_path(category), :method => :delete, :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-mini btn-danger' %>
 	  <% end %>
 
         </td>
@@ -24,5 +19,5 @@
 </table>
 
 <% if user_signed_in? %>
-<%= link_to 'New', new_category_path, :class => 'btn btn-primary' %>
+<%= link_to t('app.buttons.new_category'), new_category_path, :class => 'btn btn-primary' %>
 <% end %>
