--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,9 @@
-<% title 'Editing category' %>
+<% title t('.title') %>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @category %> |
-<%= link_to 'Back', categories_path %>
+
+<% if user_signed_in? %>
+	<%= link_to t('app.buttons.back'), categories_path, :class => "btn btn-mini"  %>
+<% end %>
+
