--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,8 @@
-<% title 'New category' %>
+<% title t('.title') %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', categories_path %>
+<% if user_signed_in? %>
+<%= link_to t('app.buttons.back'), categories_path, :class => "btn btn-mini"  %>
+<% end %>
+
