--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,7 @@
 <div class="form-actions">
   <%= link_to 'Back', categories_path, :class => 'btn'  %>
   <% if user_signed_in? %>
-    <%= link_to 'Edit', edit_category_path(@category), :class => 'btn' %>
-    <%= link_to 'Delete', category_path(@category), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+    <%= link_to t('app.buttons.edit'), edit_category_path(@category), :class => 'btn' %>
+    <%= link_to t('app.buttons.delete'), category_path(@category), :method => 'delete', :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-danger' %>
   <% end %>
 </div>
