--- a/app/views/events/_category.html.erb
+++ b/app/views/events/_category.html.erb
@@ -1,6 +1,6 @@
 <% is_html = ((defined? html) && html) ? true : false %>
 
-<% title "Events by Category" %>
+<% title t('.title') %>
 
 <% if is_html && @categories.count > 0 %>
 	<%= form_tag "/#{I18n.locale}/events/category", :method => :get, :html => { :class => 'form-horizontal' } do -%>
@@ -12,7 +12,7 @@
 
 <% if @events.nil? || @events.length == 0 %>
 	<% if !params[:cat].nil? %>
-		<p>No events exist for this category.</p>
+		<p><%= t('app.msgs.no_events_for_cat')%></p>
 	<% end %>
 <% else %>
 
