--- a/app/views/events/_day.html.erb
+++ b/app/views/events/_day.html.erb
@@ -1,9 +1,9 @@
 <% is_html = ((defined? html) && html) ? true : false %>
 
-<% title "Events on #{params[:date]}" %>
+<% title t('.title', :date => params[:date]) %>
 
 <% if @events.length == 0 %>
-	<p>No events exist for this day.
+	<p><%= t('app.msgs.no_events_for_date') %></p>
 
 <% else %>
 
