--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -33,16 +33,6 @@
 </p>
 
 <p>
-  <b>Fax:</b>
-  <%= @event.fax %>
-</p>
-
-<p>
-  <b>Email:</b>
-  <% if !@event.email.nil? %><%= link_to @event.email, @event.email %><% end %>
-</p>
-
-<p>
   <b>Website:</b>
   <%= link_to @event.url, @event.url %>
 </p>
@@ -76,8 +66,8 @@
 
 <% if is_html %>
   <p>
-		<%= link_to 'Download PDF', event_path(@event, :format => 'pdf'), :class => "btn btn-mini" %>
-		<%= link_to "Export Calendar File", events_exportICS_path(:type => "event", :typespec => @event.id), :class => "btn btn-mini" %>
+		<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf'), :class => "btn btn-mini" %>
+		<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "event", :typespec => @event.id), :class => "btn btn-mini" %>
   </p>
 <% end %>
 
@@ -85,12 +75,11 @@
 
 <% if is_html %>
   <div class="form-actions">
-    <%= link_to 'Back', events_path, :class => 'btn'  %>
+		<%= link_to t('app.buttons.back'), events_path, :class => "btn btn-mini"  %>
     <% if user_signed_in? %>
-      <%= link_to 'Edit', edit_event_path(@event), :class => 'btn' %>
-      <%= link_to 'Delete', event_path(@event), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+      <%= link_to t('app.buttons.edit'), edit_event_path(@event), :class => 'btn' %>
+      <%= link_to t('app.buttons.delete'), event_path(@event), :method => 'delete', :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-danger' %>
     <% end %>
-    <%= render :inline => addthis_share_button	 %>
   </div>
 <% end %>
 
