--- a/app/views/events/category.html.erb
+++ b/app/views/events/category.html.erb
@@ -2,8 +2,8 @@
 
 <% if !@events.nil? && @events.length > 0 %>
 <div>
-	<%= link_to 'Download PDF', category_events_path(:cat => params[:cat], :page => params[:page], :format => 'pdf'), :class => "btn btn-mini" %>
+	<%= link_to t('app.buttons.pdf'), category_events_path(:cat => params[:cat], :page => params[:page], :format => 'pdf'), :class => "btn btn-mini" %>
 
-	<%= link_to "Export Calendar File", events_exportICS_path(:type => "category", :typespec => params[:cat]), :class => "btn btn-mini" %>
+	<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "category", :typespec => params[:cat]), :class => "btn btn-mini" %>
 </div>
 <% end %>
