--- a/app/views/events/day.html.erb
+++ b/app/views/events/day.html.erb
@@ -2,7 +2,7 @@
 
 <% if !@events.nil? && @events.length > 0 %>
 <div>
-	<%= link_to 'Download PDF', day_events_path(:date => params[:date], :menu_item => params[:menu_item], :format => 'pdf'), :class => "btn btn-mini" %>
-	<%= link_to "Export", events_exportICS_path(:type => "day", :typespec => params[:date]), :class => "btn btn-mini" %>
+	<%= link_to t('app.buttons.pdf'), day_events_path(:date => params[:date], :menu_item => params[:menu_item], :format => 'pdf'), :class => "btn btn-mini" %>
+	<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "day", :typespec => params[:date]), :class => "btn btn-mini" %>
 </div>
 <% end %>
