--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,8 @@
-<% title 'Edit event' %>
+<% title t('.title') %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', events_path %>
+<% if user_signed_in? %>
+	<%= link_to t('app.buttons.back'), events_path, :class => "btn btn-mini"  %>
+<% end %>
+
