--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing page</h1>
+<% title t('.title') %>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @page %> |
-<%= link_to 'Back', pages_path %>
+
+<% if user_signed_in? %>
+	<%= link_to t('app.buttons.back'), pages_path, :class => "btn btn-mini"  %>
+<% end %>
+
