--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New page</h1>
+<% title t('.title') %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', pages_path %>
+<% if user_signed_in? %>
+<%= link_to t('app.buttons.back'), pages_path, :class => "btn btn-mini"  %>
+<% end %>
+
