--- a/app/views/sponsors/new.html.erb
+++ b/app/views/sponsors/new.html.erb
@@ -1,5 +1,8 @@
-<% title 'New sponsor' %>
+<% title t('.title') %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', sponsors_path %>
+<% if user_signed_in? %>
+<%= link_to t('app.buttons.back'), sponsors_path, :class => "btn btn-mini"  %>
+<% end %>
+
